# forge

./: .gitignore  Aether-Forge-x86_64.AppImage  README.md  aether-forge.sh  build-appimage.sh  install-models.sh  install.sh  run.sh
.github/workflows/: release.yml
extensions/: aether-file-icons.vsix  aether-icons.vsix  aether-language.vsix  aether-scrible.vsix  aether-support.vsix
extensions/aether-file-icons/: README.md  aether-file-icons-0.0.1.vsix  aether-file-icons-0.0.2.vsix  aether-file-icons-0.0.3.vsix  aether-file-icons-0.0.4.vsix  aether-file-icons-0.1.0.vsix  aether-icon-theme.json  aether-icons-0.1.0.vsix  package.json
extensions/aether-file-icons/icons/: aether-icon-theme.json
extensions/aether-language/: README.md  aether-language-0.0.1.vsix  aether-language-0.0.2.vsix  aether-language-0.0.3.vsix  aether-language-0.0.4.vsix  aether-language-0.0.5.vsix  aether-language-0.0.6.vsix  aether-language-0.0.7.vsix  aether-language-0.0.8.vsix  aether-language-0.0.9.vsix  aether-language-0.1.0.vsix  aether-support-0.1.0.vsix  extension.js  language-configuration.json  package.json
extensions/aether-language/snippets/: aether.json
extensions/aether-language/syntaxes/: aether.tmLanguage.json
extensions/aether-scrible/: .vscodeignore  README.md  package.json
flatpak/: com.stratoslabs.AetherForge.yml
share/applications/: com.stratoslabs.AetherForge.desktop
share/metainfo/: com.stratoslabs.AetherForge.metainfo.xml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/css/: forge-dark.css
src/js/: forge-app.js
(+7 files in other folders)
